Añadido en Css filtro de sombras transparente con fondo transparente

--- a/Trabajo.html
+++ b/Trabajo.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Inicio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Css/main.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -16,10 +16,10 @@
         <li class="especial"><a href="contacto.html">Contacto</a></li>
     </ul>
 
-    <img src="FunkoTopia.jpg" alt="FunkoTopia">
+    <img src="/Assets/FunkoTopia.jpg" alt="FunkoTopia">
     <h1>FunkoTopia</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod voluptatem quae, neque molestiae quidem reiciendis commodi quasi cum sint! Ipsam perspiciatis beatae omnis quam ratione tempora facilis veniam accusantium ducimus.</p>
-
+    <img src="Assets/Superman.png" >
 
 </body>
 <footer>
