--- a/contacto.html
+++ b/contacto.html
@@ -5,11 +5,11 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Contacto</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Css/main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <img src="FunkoImagen2.jpg" alt="Funko Imagen">
+    <img src="Assets/FunkoImagen2.jpg" alt="Funko Imagen">
     <h1>Contacto</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut vero vel neque maiores laudantium, non commodi aperiam consequatur iusto accusantium cumque libero voluptatum magni impedit placeat! A quasi dolores quia.</p>
     <a href="Trabajo.html">Inicio</a>
