--- a/who.html
+++ b/who.html
@@ -5,11 +5,11 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>¿Quienes somos?</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Css/main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <img src="FunkoTopia2.jpg" alt="FunkoTopia2">
+    <img src="Assets/FunkoTopia2.jpg" alt="FunkoTopia2">
     <h1>¿Quienes somos?</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quasi, quos deserunt nobis at voluptatum facere incidunt obcaecati explicabo officiis dolorem nihil laboriosam placeat iusto est ratione eaque veniam quis?</p>
     <a href="Trabajo.html">Inicio</a>
