Ajustado landing page y css

--- a/Trabajo.html
+++ b/Trabajo.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Inicio</title>
+    <title>FunkoTopia - Inicio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='Css/main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <ul>
-        <li><a href="who.html">¿Quienes somos?<a></a></li>
-        <li><a href="productos.html">Producto y Servicios</a></li>
-        <li><a href="trabaja.html">Trabaja con nosotros</a></li>
-        <li class="especial"><a href="contacto.html">Contacto</a></li>
-    </ul>
-
-    <img src="/Assets/FunkoTopia.jpg" alt="FunkoTopia">
+    <header>
+        <nav>
+            <a href="Trabajo.html"> <img src="/Assets/FunkoTopia.jpg" alt="FunkoTopia" width="100" height="100"></a>
+            <ul>
+                <li><a href="who.html">¿Quienes somos?</a></li>
+                <li><a href="productos.html">Producto y Servicios</a></li>
+                <li><a href="trabaja.html">Trabaja con nosotros</a></li>
+                <li class="especial"><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>    
+   
     <h1>FunkoTopia</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod voluptatem quae, neque molestiae quidem reiciendis commodi quasi cum sint! Ipsam perspiciatis beatae omnis quam ratione tempora facilis veniam accusantium ducimus.</p>
     <img src="Assets/Superman.png" >
 
 </body>
 <footer>
-    <h3>Tambien puedes visitarnos en: </h3>
+    <h3>También puedes visitarnos en: </h3>
 </footer>
 </html>
