--- a/productos.html
+++ b/productos.html
@@ -15,6 +15,6 @@
     <a href="Trabajo.html">Inicio</a>
 </body>
 <footer>
-    <h3>Tambien puedes visitarnos en: </h3>
+    <h3>También puedes visitarnos en: </h3>
 </footer>
 </html>
