Modificado fuente y ajustes varios

--- a/Trabajo.html
+++ b/Trabajo.html
@@ -7,24 +7,29 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='Css/main.css'>
     <script src='main.js'></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <a href="Trabajo.html"> <img src="/Assets/FunkoTopia.jpg" alt="FunkoTopia" width="100" height="100"></a>
             <ul>
-                <li><a href="who.html">¿Quienes somos?</a></li>
+                <li><a href="who.html">¿Quiénes somos?</a></li>
                 <li><a href="productos.html">Producto y Servicios</a></li>
                 <li><a href="trabaja.html">Trabaja con nosotros</a></li>
                 <li class="especial"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
-    </header>    
-   
-    <h1>FunkoTopia</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod voluptatem quae, neque molestiae quidem reiciendis commodi quasi cum sint! Ipsam perspiciatis beatae omnis quam ratione tempora facilis veniam accusantium ducimus.</p>
-    <img src="Assets/Superman.png" >
+    </header>  
 
+   <div class="Contenido">
+        <h1 class="Titulo">FunkoTopia</h1>
+        <p>Página dedicada a la venta de productos merchandising principalmente de Funko POP.</p>
+        <img src="Assets/Superman.png" >
+    </div>
+    
 </body>
 <footer>
     <h3>También puedes visitarnos en: </h3>
