--- a/productos.html
+++ b/productos.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <img src="FunkoTopia3.jpg" alt="FunkoTopia3">
+    <img src="Assets/FunkoTopia3.jpg" alt="FunkoTopia3">
     <h1>Producto y Servicios</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque magnam blanditiis illum. Incidunt ipsa sapiente libero modi obcaecati? Iusto in itaque at. Quaerat veniam iste qui delectus maiores, sunt corrupti.</p>
     <a href="Trabajo.html">Inicio</a>
