--- a/productos.html
+++ b/productos.html
@@ -12,7 +12,7 @@
     <img src="Assets/FunkoTopia3.jpg" alt="FunkoTopia3">
     <h1>Producto y Servicios</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque magnam blanditiis illum. Incidunt ipsa sapiente libero modi obcaecati? Iusto in itaque at. Quaerat veniam iste qui delectus maiores, sunt corrupti.</p>
-    <a href="Trabajo.html">Inicio</a>
+    <a href="Trabajo.html" class="Inicio">Inicio</a>
 </body>
 <footer>
     <h3>También puedes visitarnos en: </h3>
