--- a/trabaja.html
+++ b/trabaja.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Trabaja con nosotros</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='Assets/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Css/main.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -68,7 +68,7 @@
         <input type="reset" value="Borrar">
     </form>
     
-    <a href="Trabajo.html">Inicio</a>
+    <a href="Trabajo.html" class="Inicio">Inicio</a>
 </body>
 <footer>
     <h3>También puedes visitarnos en: </h3>
