--- a/Trabajo.html
+++ b/Trabajo.html
@@ -12,26 +12,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="Trabajo.html"> <img src="/Assets/FunkoTopia.jpg" alt="FunkoTopia" width="100" height="100"></a>
-            <ul>
-                <li><a href="who.html">¿Quiénes somos?</a></li>
-                <li><a href="productos.html">Producto y Servicios</a></li>
-                <li><a href="trabaja.html">Trabaja con nosotros</a></li>
-                <li class="especial"><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>  
-
+    <section>
+        <header>
+            <a href="Trabajo.html" class="Logo">FunkoTopia</a>
+            <nav>
+                <ul class="navbar">
+                    <li><a href="who.html">¿Quiénes somos?</a></li>
+                    <li><a href="productos.html">Producto y Servicios</a></li>
+                    <li><a href="trabaja.html">Trabaja con nosotros</a></li>
+                    <li class="especial"><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>  
+    </section>
    <div class="Contenido">
         <h1 class="Titulo">FunkoTopia</h1>
+        <img src="/Assets/FunkoTopia.jpg" alt="FunkoTopia" width="100" height="100">
         <p>Página dedicada a la venta de productos merchandising principalmente de Funko POP.</p>
         <img src="Assets/Superman.png" >
     </div>
     
 </body>
 <footer>
-    <h3>También puedes visitarnos en: </h3>
+    <ul class="rrss">
+        <li class="li">
+        <h3>También puedes visitarnos en: </h3>
+        <a href="#" class="Twitter" title="Twitter" target="_blank" rel="noopener noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 24 24">
+                <path d="M10.053,7.988l5.631,8.024h-1.497L8.566,7.988H10.053z M21,6v12	c0,1.657-1.343,3-3,3H6c-1.657,0-3-1.343-3-3V6c0-1.657,1.343-3,3-3h12C19.657,3,21,4.343,21,6z M17.538,17l-4.186-5.99L16.774,7	h-1.311l-2.704,3.16L10.552,7H6.702l3.941,5.633L6.906,17h1.333l3.001-3.516L13.698,17H17.538z"></path>
+                </svg>
+        </a>   
+        </li>
+        <li class="li">
+            <a href="#" class="TikTok" title="Twitter" target="_blank" rel="noopener noreferrer">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 24 24">
+                    <path d="M 6 3 C 4.3550302 3 3 4.3550302 3 6 L 3 18 C 3 19.64497 4.3550302 21 6 21 L 18 21 C 19.64497 21 21 19.64497 21 18 L 21 6 C 21 4.3550302 19.64497 3 18 3 L 6 3 z M 12 7 L 14 7 C 14 8.005 15.471 9 16 9 L 16 11 C 15.395 11 14.668 10.734156 14 10.285156 L 14 14 C 14 15.654 12.654 17 11 17 C 9.346 17 8 15.654 8 14 C 8 12.346 9.346 11 11 11 L 11 13 C 10.448 13 10 13.449 10 14 C 10 14.551 10.448 15 11 15 C 11.552 15 12 14.551 12 14 L 12 7 z"></path>
+                    </svg>
+            </a>
+        </li>
+        <li class="li">
+            <a href="#" class="" title="FaceBook" target="_blank" rel="noopener noreferrer">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 24 24">
+                    <path d="M19,3H5C3.895,3,3,3.895,3,5v14c0,1.105,0.895,2,2,2h7.621v-6.961h-2.343v-2.725h2.343V9.309 c0-2.324,1.421-3.591,3.495-3.591c0.699-0.002,1.397,0.034,2.092,0.105v2.43h-1.428c-1.13,0-1.35,0.534-1.35,1.322v1.735h2.7 l-0.351,2.725h-2.365V21H19c1.105,0,2-0.895,2-2V5C21,3.895,20.105,3,19,3z"></path>
+                </svg>
+            </a>
+        </li>
+    </ul>
 </footer>
 </html>
