--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     <img src="Assets/FunkoImagen2.jpg" alt="Funko Imagen">
     <h1>Contacto</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut vero vel neque maiores laudantium, non commodi aperiam consequatur iusto accusantium cumque libero voluptatum magni impedit placeat! A quasi dolores quia.</p>
-    <a href="Trabajo.html">Inicio</a>
+    <a href="Trabajo.html" class="Inicio">Inicio</a>
 </body>
 <footer>
     <h3>Tambien puedes visitarnos en: </h3>
