--- a/who.html
+++ b/who.html
@@ -9,10 +9,10 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <img src="Assets/FunkoTopia2.jpg" alt="FunkoTopia2">
+    <img src="Assets/FunkoTopia2.jpg" alt="FunkoTopia2" class="who_png">
     <h1>¿Quienes somos?</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quasi, quos deserunt nobis at voluptatum facere incidunt obcaecati explicabo officiis dolorem nihil laboriosam placeat iusto est ratione eaque veniam quis?</p>
-    <a href="Trabajo.html">Inicio</a>
+    <a href="Trabajo.html" class="Inicio">Inicio</a>
 
 </body>
 <footer>
